# DTN-Hardware

./: .gitignore  CMakeLists.txt  HARDWARE.md  README.md
.github/workflows/: ci.yml
config/: contact_plan.json
dtn_core/: bundle.c  bundle.h  cgr.c  cgr.h  contact.c  contact.h  custody.c  custody.h  disruption.c  disruption.h  queue.c  queue.h  trace.c  trace.h  types.c  types.h
esp32-firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32-firmware/components/dtn_core/: CMakeLists.txt
esp32-firmware/components/dtn_transport/: CMakeLists.txt
esp32-firmware/main/: CMakeLists.txt
ground/dashboard/: app.py
ground/dashboard/templates/: index.html
node/: forwarding.c  forwarding.h  main_esp32.c  main_pi.c
tests/: test_core.c
transport/: lora_common.c  lora_esp32.c  lora_pi.c  lora_transport.h
